[package]
name = "libp2p-perf"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
clap = { version = "4.5.31", features = ["derive", "cargo"] }
tokio = { version = "1.28", features = ["macros", "time", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1.34"
futures = "0.3.28"

thiserror = "1.0"
futures-bounded = "0.2.4"


libp2p = { version = "0.56.0", features = ["dns", "identify", "kad", "macros", "mdns", "noise", "ping", "tcp",  "tokio", "yamux", "websocket", "request-response"] }
libp2p-core = { version = "0.43.1" }
libp2p-swarm = { version = "0.47.0" }
libp2p-identity = { version = "0.2.12", features = ["ed25519", "peerid", "rand"] }
libp2p-tls = "0.6.2"
libp2p-noise = "0.46.1"
libp2p-webrtc = { version = "0.9.0-alpha.1", features = ["tokio"] }
libp2p-yamux = "0.47.0"
void = "1"

utils = { path = "../utils" }
rand = "0.8"
