[package]
name = "litep2p"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
clap = { version = "4.5.31", features = ["derive", "cargo"] }
tokio = { version = "1.28", features = ["macros", "time", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3" }
tracing = "0.1.34"
futures = "0.3.28"

litep2p = { version = "0.9.1", features = ["websocket"] }

